# CmakeMreTemplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-arm-none-eabi.cmake
core/: CMakeLists.txt  dll.def  gccmain.c
main/: CMakeLists.txt  main.cpp
mreapi/: CMakeLists.txt
resourses/: CMakeLists.txt  demo.txt
run/: CMakeLists.txt
run/run_in_MoDis/: CMakeLists.txt
vxp/: CMakeLists.txt
